--- a/css/styles.css
+++ b/css/styles.css
@@ -372,6 +372,7 @@ body {
 /* Наша команда */
 
 .worker-item {
+  background-color: var(--primary-bg-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
@@ -382,10 +383,25 @@ body {
 }
 
 .social-icons {
-  display: inline-flex;
-  justify-content: center;
+  display: flex;
+  justify-content: space-between;
   align-items: center;
+  width: 100%;
+  padding: 0px 32px;
 }
+
+.master-social-links {
+  width: 44px;
+  height: 44px;
+  /* display: flex;
+  align-items: center;
+  justify-content: center; */
+  border-radius: 50%;
+}
+/* .master-social-links svg {
+  width: inherit;
+  height: inherit;
+} */
 
 .image {
   display: block;
@@ -418,6 +434,7 @@ body {
 .section-content {
   padding-top: 30px;
   padding-bottom: 30px;
+  border-radius: 50%;
 }
 
 h1,
