--- a/css/styles.css
+++ b/css/styles.css
@@ -384,20 +384,28 @@ body {
 
 .social-icons {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
+  width: 44px;
+  height: 44px;
   width: 100%;
   padding: 0px 32px;
 }
-
 .master-social-links {
   width: 44px;
   height: 44px;
-  /* display: flex;
+  background-color: yellow;
+  display: flex;
   align-items: center;
-  justify-content: center; */
+  justify-content: center;
   border-radius: 50%;
 }
+.master-social-links:hover,
+.master-social-links:focus {
+  background-color: var(--accent-color);
+  fill: var(--primary-bg-color);
+}
+
 /* .master-social-links svg {
   width: inherit;
   height: inherit;
@@ -435,6 +443,7 @@ body {
   padding-top: 30px;
   padding-bottom: 30px;
   border-radius: 50%;
+  width: 270px;
 }
 
 h1,
